--- a/tool/aframe2.html
+++ b/tool/aframe2.html
@@ -5,28 +5,16 @@
   </head>
   <body>
     <a-scene>
-      <a-box position="0 0.5 -4.5" rotation="0 0 0" height="1" width="5" color="black"></a-box>
-       <a-sphere position="1.7 3 -5" radius="1" color="black"></a-sphere>
-       <a-sphere position="-1.7 3 -5" radius="1" color="black"></a-sphere>
-      cylinder>
 
-      <a-box position="0 2 -5" rotation=" 0 0 0" radius= "0" width="9" height="7"  color="grey"></a-box>
 
-      <a-box position="0 2 -13" rotation=" 0 0 0" radius= "0" width="9" height="7"  color="grey"></a-box>
 
-      <a-box position="5 2 -9" rotation=" 0 90 0" radius= "0" width="9" height="7"  color="grey"></a-box>
-
-      <a-box position="-5 2 -9" rotation=" 0 90 0" radius= "0" width="9" height="7"  color="grey"></a-box>
-
-      <a-box position="0 5 -9" rotation=" 90 0 0" radius= "0" width="9" height="7"  color="grey"></a-box>
-
-      <a-sky color="lightblue"></a-sky>
+      <a-sky src="#sky"></a-sky>
 
       <a-assets>
-        <img id="my-image" src="imgs/sky.jpg" />
+        <img id="sky" src="img/sky.jpeg" />
       </a-assets>
 
-      <a-image src="#my-image" position="0 1.5 -3" width="16" height="9" ></a-image></a-image>
+
 
     </a-scene>
   </body>
