--- a/tool/aframe2.html
+++ b/tool/aframe2.html
@@ -12,7 +12,7 @@
            color: FFFFFF;" src="#grass" rotation= "-90 0 0" scale= "1000 1000 1"></a-plane>
 
 
-      <a-sky src="#sky" repeat: 5000 5000; normal-texture-repeat="5000, 5000"></a-sky>
+      <a-sky src="#sky"></a-sky>
 
 
       <a-assets>
