--- a/tool/aframe4.html
+++ b/tool/aframe4.html
@@ -7,12 +7,12 @@
   <body>
     <a-scene>
 
-      <a-camera position="25 0 0"></a-camera>
+      <a-camera position="50 0 38"></a-camera>
 
       <a-sky src="https://media.istockphoto.com/id/1363878760/photo/360-degree-space-nebula-panorama-equirectangular-projection-environment-map-hdri-spherical.jpg?s=170667a&w=0&k=20&c=WgPIQSMonMcIZ9fujRYi1UijKlkEioI1uWbffSaPY8Q="  color="#ECECEC"></a-sky>
 
 
-      <a-sphere src="https://cdn.mos.cms.futurecdn.net/j2Vj6UiuDCMqqRt75htuHm.jpg" position="-6 2 -18" radius="12" segments-height="60">
+      <a-sphere src="https://cdn.mos.cms.futurecdn.net/j2Vj6UiuDCMqqRt75htuHm.jpg" position="-10 2 -18" radius="14" segments-height="60">
         <a-animation attribute= "rotation"
         dur="10000"
         to= "0 360 0"
@@ -42,7 +42,7 @@
 
 
 
-      <a-sphere src="https://www.wired.com/images_blogs/wiredscience/2011/03/Messenger-first-image1.jpg" position="10 2 -18" radius="0.6" segments-height="60">
+      <a-sphere src="https://www.wired.com/images_blogs/wiredscience/2011/03/Messenger-first-image1.jpg" position="10 2 -18" radius="0.8" segments-height="60">
         <a-animation attribute= "rotation"
         dur="10000"
         to= "0 360 0"
@@ -52,7 +52,7 @@
 
       </a-sphere>
 
-      <a-sphere src="https://t4.ftcdn.net/jpg/01/95/38/71/360_F_195387192_nTpRC2usGI2MXWeY45PWuxPA7V4h7jgl.webp" position="34 2 -18" radius="0.9" segments-height="60">
+      <a-sphere src="https://t4.ftcdn.net/jpg/01/95/38/71/360_F_195387192_nTpRC2usGI2MXWeY45PWuxPA7V4h7jgl.webp" position="32 2 -18" radius="1.1" segments-height="60">
         <a-animation attribute= "rotation"
         dur="10000"
         to= "0 360 0"
@@ -61,7 +61,7 @@
       </a-animation>
       </a-sphere>
 
-      <a-sphere src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSYGgcSkctf7ozuiPEh4bb3Ea-tjREZPKViqg&usqp=CAU" position="46 2 -18" radius="6" segments-height="60" >
+      <a-sphere src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSYGgcSkctf7ozuiPEh4bb3Ea-tjREZPKViqg&usqp=CAU" position="46 2 -18" radius="9" segments-height="60" >
         <a-animation attribute= "rotation"
         dur="10000"
         to= "0 360 0"
@@ -82,6 +82,25 @@
       <a-ring src="https://lh3.googleusercontent.com/proxy/vLa1XrbfnTgwwJCDIYJajJ0u1v_hKeXkj1RLTDu6F4tL2U8Hf524R1FlXPC8IY1ez7E7Z89Kvi0iDkgwI1LW31cz6ArcGlxrQeManeFxi-PNdOtMdmI-QdEB"  radius-inner="10" radius-outer="13" position="70 2 -20" rotation="-80 0 0">
 
       </a-ring>
+
+      <a-sphere src="https://static.wikia.nocookie.net/planet-texture-maps/images/c/c2/Dh_uranus_texture.png/revision/latest?cb=20211011001243" position="95 2 -20" radius="5.2" segments-height="60" >
+        <a-animation attribute= "rotation"
+        dur="10000"
+        to= "0 360 0"
+        ease="linear"
+        repeat="indefinite">
+      </a-animation>
+      </a-sphere>
+
+      <a-sphere src="https://static.wikia.nocookie.net/planet-texture-maps/images/5/5b/RS3_Neptune.jpg/revision/latest?cb=20220815013329" position="110 2 -20" radius="4.2" segments-height="60" >
+        <a-animation attribute= "rotation"
+        dur="10000"
+        to= "0 360 0"
+        ease="linear"
+        repeat="indefinite">
+      </a-animation>
+      </a-sphere>
+
 
     </a-scene>
   </body>
