--- a/tool/aframe4.html
+++ b/tool/aframe4.html
@@ -79,8 +79,12 @@
       </a-animation>
       </a-sphere>
 
-      <a-ring src="https://lh3.googleusercontent.com/proxy/vLa1XrbfnTgwwJCDIYJajJ0u1v_hKeXkj1RLTDu6F4tL2U8Hf524R1FlXPC8IY1ez7E7Z89Kvi0iDkgwI1LW31cz6ArcGlxrQeManeFxi-PNdOtMdmI-QdEB"  radius-inner="10" radius-outer="13" position="70 2 -20" rotation="-80 0 0">
-
+      <a-ring
+        src="https://lh3.googleusercontent.com/proxy/vLa1XrbfnTgwwJCDIYJajJ0u1v_hKeXkj1RLTDu6F4tL2U8Hf524R1FlXPC8IY1ez7E7Z89Kvi0iDkgwI1LW31cz6ArcGlxrQeManeFxi-PNdOtMdmI-QdEB"
+        radius-inner="10"
+        radius-outer="13"
+        position="70 2 -20"
+        rotation="-80 0 0">
       </a-ring>
 
       <a-sphere src="https://static.wikia.nocookie.net/planet-texture-maps/images/c/c2/Dh_uranus_texture.png/revision/latest?cb=20211011001243" position="95 2 -20" radius="5.2" segments-height="60" >
