--- a/tool/aframe-plan/day3.html
+++ b/tool/aframe-plan/day3.html
@@ -1,12 +1,21 @@
 <html>
-  <head>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-  </head>
+    <script src="https://unpkg.com/aframe-event-set-component@3.0.3/dist/aframe-event-set-component.min.js"></script>
   <body>
+
     <a-scene>
+      <a-torus
+        position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"
+        event-set__enter="_event: mouseenter; _target: #cylinderText; visible: true"
+        event-set__leave="_event: mouseleave; _target: #cylinderText; visible: false"
+        src="https://www.shutterstock.com/image-vector/cake-glaze-colorful-seamless-pattern-600nw-277068518.jpg">
+        <a-text id="cylinderText" value="This is a donut" align="center" color="black" visible="false" position="0 -0.5 1"
+        geometry="primitive: plane; width: 1.75" material="color: pink"></a-text>
+      </a-torus>
 
-
-
+        <a-camera>
+          <a-cursor></a-cursor>
+        </a-camera>
     </a-scene>
   </body>
 </html>
