--- a/tool/aframe-plan/day2.html
+++ b/tool/aframe-plan/day2.html
@@ -5,36 +5,31 @@
   <body>
     <a-scene>
 
-        <a-camera position=" 5 0 100"> </a-camera>
+        <a-camera position="20 6 -55"> </a-camera>
 
         <a-sky color="black"></a-sky>
 
 
             <a-sphere
             position="0 0 0"
-             src="https://cdn.mos.cms.futurecdn.net/j2Vj6UiuDCMqqRt75htuHm.jpg"
+             src="https://raw.githubusercontent.com/aframevr/sample-assets/master/assets/images/space/earth_atmos_2048.jpg"
             radius="14"
-            animation="property: rotation; to:0 360 0; ease:linear; dur:100000; loop:true;"
+            animation="property: rotation; to:0 360 0; ease:linear; dur:9500; loop:true;"
             ></a-sphere>
 
 
-            <a-entity rotation="0 0 0" animation="property: rotation; to: 0 360 0; loop: true; dur: 9000">
+            <a-entity rotation="0 0 0" animation="property: rotation; to: 0 360 0; loop: true; dur: 7000">
                 <a-sphere
-                position="5 0 -25"
-                 src="https://www.sciencealert.com/images/2020-09/venus_surface_topicbody.jpg"
+                position="5 0 -55"
+                 src="https://t3.ftcdn.net/jpg/00/81/29/74/360_F_81297447_kfFfYem0dWGkQRL8hNhA0nIOYvrBQft0.jpg"
                  radius="2"
-                 animation="property: rotation; to:0 360 0; ease:linear; dur:8000; loop:true;"
+                 animation="property: rotation; to:0 360 0; ease:linear; dur: 9000; loop:true;"
                 ></a-sphere>
             </a-entity>
 
-        <a-entity rotation="0 0 0" animation="property: rotation; to: 0 360 0; loop: true; dur: 9000">
-            <a-sphere
-            position="5 0 -35"
-             src="https://raw.githubusercontent.com/aframevr/sample-assets/master/assets/images/space/earth_atmos_2048.jpg"
-             radius="3"
-             animation="property: rotation; to:0 360 0; ease:linear; dur:8000; loop:true;"
-            ></a-sphere>
-        </a-entity>
+     
+
+
 
 
     </a-scene>
