--- a/tool/aframe-plan/day3.html
+++ b/tool/aframe-plan/day3.html
@@ -5,7 +5,7 @@
 
     <a-scene>
       <a-torus
-        position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"
+        position="1 0.75 -3" radius="0.5" height="1.5"
         event-set__enter="_event: mouseenter; _target: #cylinderText; visible: true"
         event-set__leave="_event: mouseleave; _target: #cylinderText; visible: false"
         src="https://www.shutterstock.com/image-vector/cake-glaze-colorful-seamless-pattern-600nw-277068518.jpg">
