--- a/tool/aframe-plan/day2.html
+++ b/tool/aframe-plan/day2.html
@@ -9,7 +9,7 @@
 
         <a-sky color="black"></a-sky>
 
-
+            <!-- Earth -->
             <a-sphere
             position="0 0 0"
              src="https://raw.githubusercontent.com/aframevr/sample-assets/master/assets/images/space/earth_atmos_2048.jpg"
@@ -18,6 +18,7 @@
             ></a-sphere>
 
 
+            <!-- Moon -->
             <a-entity rotation="0 0 0" animation="property: rotation; to: 0 360 0; loop: true; dur: 7000">
                 <a-sphere
                 position="5 0 -55"
@@ -27,7 +28,7 @@
                 ></a-sphere>
             </a-entity>
 
-     
+
 
 
 
