--- a/tool/aframe-plan/day3.html
+++ b/tool/aframe-plan/day3.html
@@ -6,10 +6,10 @@
     <a-scene>
       <a-torus
         position="1 0.75 -3" radius="0.5" height="1.5"
-        event-set__enter="_event: mouseenter; _target: #cylinderText; visible: true"
-        event-set__leave="_event: mouseleave; _target: #cylinderText; visible: false"
+        event-set__enter="_event: mouseenter; _target: #donutText; visible: true"
+        event-set__leave="_event: mouseleave; _target: #donutText; visible: false"
         src="https://www.shutterstock.com/image-vector/cake-glaze-colorful-seamless-pattern-600nw-277068518.jpg">
-        <a-text id="cylinderText" value="This is a donut" align="center" color="black" visible="false" position="0 -0.5 1"
+        <a-text id="donutText" value="This is a donut" align="center" color="black" visible="false" position="0 -0.5 1"
         geometry="primitive: plane; width: 1.75" material="color: pink"></a-text>
       </a-torus>
 
