--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <title> freedom Project: Mental Health Care</title>
     </head>
-    <body>
+    <body id="page-top">
         <!-- HTML -->
 
         <!-- Navigation-->
@@ -48,6 +48,46 @@
           <div class="bg-circle-3 bg-circle"></div>
           <div class="bg-circle-4 bg-circle"></div>
       </header>
+
+
+      <!-- Context -->
+      <section id="scroll">
+            <div class="masthead-content">
+                <div class="container px-5">
+                    <header class="text-center">
+                    <h2 class="masthead-heading mb-0">Overview</h2>
+                    </header>
+                    <p>
+                        Throughout time mental health issues have caused trouble to many people.
+
+                        Even though mental problems take place inside of the mind, there are technology that can help with treat them.
+
+                        This site will look at the technological innovations of mental health care, and possible treatments that could be used in the future.
+                    </p>
+
+                </div>
+            </div>
+
+
+<!--
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5">
+                        <h2 class="display-4"> Context </h2>
+
+
+                        <p>
+                            Throughout time, mental health issues have caused trouble to many people.
+
+                            Even though the problems take place inside of the mind, there is technology that can help with treating mental issues.
+
+                            This site will look at the technological innovations of mental health care, and possible treatments that could be used in the future.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section> -->
+    </section>
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
