--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
-          <div class="container px-5">
+          <div class="container px-3">
               <a class="navbar-brand" href="#page-top">Home</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
               <div class="collapse navbar-collapse" id="navbarResponsive">
                   <ul class="navbar-nav ms-auto">
-                      <li class="nav-item"><a class="nav-link" href="#!"></a></li>
+                      <li class="nav-item"><a class="nav-link" href="#etech"> Existing Technology</a></li>
                       <li class="nav-item"><a class="nav-link" href="#!"></a></li>
                   </ul>
               </div>
@@ -39,7 +39,7 @@
         <header class="masthead text-center text-white">
           <div class="masthead-content">
               <div class="container px-5">
-                  <h1 class="masthead-heading mb-0">Mental health Care</h1>
+                  <h1 class="masthead-heading">Mental health Care</h1>
 
               </div>
           </div>
@@ -55,7 +55,7 @@
             <div class="masthead-content">
                 <div class="container px-5">
                     <header class="text-center">
-                    <h2 class="masthead-heading mb-0">Overview</h2>
+                    <h1 class="masthead-heading mb-0">Overview</h1>
                     </header>
                     <p>
                         Throughout time mental health issues have caused trouble to many people.
@@ -67,27 +67,149 @@
 
                 </div>
             </div>
-
-
-<!--
-                <div class="col-lg-6 order-lg-1">
-                    <div class="p-5">
-                        <h2 class="display-4"> Context </h2>
-
-
-                        <p>
-                            Throughout time, mental health issues have caused trouble to many people.
-
-                            Even though the problems take place inside of the mind, there is technology that can help with treating mental issues.
-
-                            This site will look at the technological innovations of mental health care, and possible treatments that could be used in the future.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
     </section>
+
+    <!-- Part A -->
+    <section id="etech">
+        <div class="masthead-content">
+            <div class="container px-5">
+                <header class="text-center">
+                <h1 class="masthead-heading mb-0"> Existing Technology </h1>
+                </header>
+              </section>
+
+
+              <section>
+                <div class="accordion accordion-flush" id="a">
+                  <div class="accordion-item">
+
+                    <h3 class=" text-center accordion-header" id="flush-headingOne">
+                      <button class=" purple btn-lg collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                       Portable Devices:
+                      </button>
+                    </h3>
+                      <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#a">
+                      <div class="accordion-body">
+                         <p class="text-center"> These are devices that you can bring anywhere.</p>
+                      </div>
+                      </div>
+                  </div>
+                 </div>
+
+
+
+
+                </section>
+
+                <section>
+                <!-- Carousel -->
+
+                    <div id="port" class="carousel carousel-dark slide" data-bs-ride="false">
+                      <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#port" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#port" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#port" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                      </div>
+
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <div class="card text-bg-dark mb-5">
+                            <div class="card-body">
+                          <h5 class=" text-center card-title">Smartphones</h5>
+                          <p class="card-text text-center text-white">Smartphones give you access to many mental health care apps and sources.</p>
+                          <img src="/prep/smartphone.webp" class="card-img-bottom rounded" alt="...">
+                          </div>
+                          </div>
+                        </div>
+
+                        <div class="carousel-item">
+                            <div class="card text-bg-dark mb-5">
+                              <div class="card-body">
+                            <h5 class=" text-center card-title">Smartwatch</h5>
+                            <p class="card-text text-center text-white text-md-start"> A wearable device that gives you easy access to mental health care apps. </p>
+                            <img src="/prep/swatch.webp" class="card-img-bottom rounded" alt="...">
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="carousel-item">
+                        <div class="card text-bg-dark mb-5">
+                          <div class="card-body">
+                        <h5 class=" text-center card-title">Abilify MyCite</h5>
+                        <p class="card-text text-center text-white"> A pill with a sensor inside that tracks drug ingestion, it is also used to treat schizophrenia. </p>
+                        <img src="/prep/repview.jpg" class="card-img-bottom rounded" alt="...">
+                      </div>
+                    </div>
+                    </div>
+
+                      </div>
+                      <button class="carousel-control-prev" type="button" data-bs-target="#port" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#port" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                      </button>
+                    </div>
+
+                  </section>
+
+                  <section>
+
+                    <div class="accordion accordion-flush" id="a">
+                      <div class="accordion-item">
+
+                        <h3 class=" text-center accordion-header" id="flush-headingOne">
+                          <button class=" purple btn-lg collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                            Simulations
+                          </button>
+                        </h3>
+                          <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#a">
+                          <div class="accordion-body">
+                             <p class="text-center"> A simulation is an imitative representation of a process or system. </p>
+                          </div>
+                          </div>
+                      </div>
+                     </div>
+
+                  </section>
+
+                 <section>
+                  <h4 class="text-center text-decoration-underline"> Virtual Reality Therapy (VRT) </h4>
+                  <p class="text-center small-text"> VRT uses a virtual world to help people treat their anxiety disorders, phobias, and post-traumatic stress disorder (PTSD).</p>
+                  <img src="/prep/vrt.jpg" class="rounded mx-auto d-block" alt="...">
+                </section>
+
+                <section>
+                  <h4 class="text-center text-decoration-underline"> Prescription Video Games </h4>
+                  <p class="text-center small-text"> Videogames that are used to treat mental conditions. </p>
+
+                  <div class="row row-cols-1 row-cols-md-2 g-4">
+                    <div class="col">
+                      <div class="card text-bg-dark">
+                        <img src="/prep/end.jpg" class="card-img-top" alt="...">
+                        <div class="card-body text-bg-dark">
+                          <h5 class="card-title">EndeavorRx</h5>
+                          <p class="card-text text-white small-text">This is the first medical prescription videogame and it is used to treat 8-12 year old kids with ADHD
+                            .</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card text-bg-dark">
+                        <img src="/prep/sp.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">SPARX</h5>
+                          <p class="card-text text-white small-text">A prescription videogame used to treat depression and anxiety in people who are ages 12–25.</p>
+                        </div>
+                      </div>
+                    </div>
+
+                </section>
+
+
+
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
