--- a/index.html
+++ b/index.html
@@ -27,9 +27,14 @@
               <a class="navbar-brand" href="#page-top">Home</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
               <div class="collapse navbar-collapse" id="navbarResponsive">
+
                   <ul class="navbar-nav ms-auto">
+                      <li class="nav-item"><a class="nav-link" href="#over"> Overview</a></li>
                       <li class="nav-item"><a class="nav-link" href="#etech"> Existing Technology</a></li>
-                      <li class="nav-item"><a class="nav-link" href="#!"></a></li>
+                      <li class="nav-item"><a class="nav-link" href="#apps"> Apps </a></li>
+                      <li class="nav-item"><a class="nav-link" href="#">  </a></li>
+
+
                   </ul>
               </div>
           </div>
@@ -51,7 +56,7 @@
 
 
       <!-- Context -->
-      <section id="scroll">
+      <section id="over">
             <div class="masthead-content">
                 <div class="container px-5">
                     <header class="text-center">
@@ -70,7 +75,7 @@
     </section>
 
     <!-- Part A -->
-    <section id="etech">
+    <section class="green" id="etech">
         <div class="masthead-content">
             <div class="container px-5">
                 <header class="text-center">
@@ -79,9 +84,9 @@
               </section>
 
 
-              <section>
+              <section class="green">
                 <div class="accordion accordion-flush" id="a">
-                  <div class="accordion-item">
+                  <div class="accordion-item green">
 
                     <h3 class=" text-center accordion-header" id="flush-headingOne">
                       <button class=" purple btn-lg collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -90,7 +95,7 @@
                     </h3>
                       <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#a">
                       <div class="accordion-body">
-                         <p class="text-center"> These are devices that you can bring anywhere.</p>
+                         <p class="text-center text-white"> These are devices that you can bring anywhere.</p>
                       </div>
                       </div>
                   </div>
@@ -101,7 +106,7 @@
 
                 </section>
 
-                <section>
+                <section class="green">
                 <!-- Carousel -->
 
                     <div id="port" class="carousel carousel-dark slide" data-bs-ride="false">
@@ -142,6 +147,7 @@
                     </div>
                     </div>
 
+
                       </div>
                       <button class="carousel-control-prev" type="button" data-bs-target="#port" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -155,10 +161,10 @@
 
                   </section>
 
-                  <section>
+                  <section class="ggreen">
 
-                    <div class="accordion accordion-flush" id="a">
-                      <div class="accordion-item">
+                    <div class="accordion accordion-flush"  id="a">
+                      <div class="accordion-item ggreen">
 
                         <h3 class=" text-center accordion-header" id="flush-headingOne">
                           <button class=" purple btn-lg collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -167,7 +173,7 @@
                         </h3>
                           <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#a">
                           <div class="accordion-body">
-                             <p class="text-center"> A simulation is an imitative representation of a process or system. </p>
+                             <p class="text-center text-white"> A simulation is an imitative representation of a process or system. </p>
                           </div>
                           </div>
                       </div>
@@ -175,34 +181,77 @@
 
                   </section>
 
-                 <section>
+                 <section class="ggreen">
                   <h4 class="text-center text-decoration-underline"> Virtual Reality Therapy (VRT) </h4>
-                  <p class="text-center small-text"> VRT uses a virtual world to help people treat their anxiety disorders, phobias, and post-traumatic stress disorder (PTSD).</p>
+                  <p class="text-center small-text text-white"> VRT uses a virtual world to help people treat their anxiety disorders, phobias, and post-traumatic stress disorder (PTSD).</p>
                   <img src="/prep/vrt.jpg" class="rounded mx-auto d-block" alt="...">
                 </section>
 
-                <section>
+                <section class="ggreen">
                   <h4 class="text-center text-decoration-underline"> Prescription Video Games </h4>
-                  <p class="text-center small-text"> Videogames that are used to treat mental conditions. </p>
+                  <p class="text-center small-text text-white"> Videogames that are used to treat mental conditions. </p>
 
                   <div class="row row-cols-1 row-cols-md-2 g-4">
                     <div class="col">
                       <div class="card text-bg-dark">
-                        <img src="/prep/end.jpg" class="card-img-top" alt="...">
                         <div class="card-body text-bg-dark">
                           <h5 class="card-title">EndeavorRx</h5>
-                          <p class="card-text text-white small-text">This is the first medical prescription videogame and it is used to treat 8-12 year old kids with ADHD
-                            .</p>
+                          <p class="card-text text-white small-text">This is the first medical prescription videogame and it is used to treat 8-12 year old kids with ADHD.</p>
+                            <img src="/prep/end.jpg" class="card-img-top" alt="...">
                         </div>
                       </div>
                     </div>
                     <div class="col">
                       <div class="card text-bg-dark">
-                        <img src="/prep/sp.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">SPARX</h5>
                           <p class="card-text text-white small-text">A prescription videogame used to treat depression and anxiety in people who are ages 12–25.</p>
+                          <img src="/prep/sp.jpg" class="card-img-top" alt="...">
                         </div>
+                      </div>
+                    </div>
+
+                </section>
+
+                <section class="darkblue" id="apps">
+                  <h1 class="text-center text-decoration-underline"> Mental Health Apps </h1>
+                  <p class="text-center small-text text-white"> These apps can be downloaded on devices like your phone, and they are used to help with your mental health </p>
+
+                  <!-- cards -->
+                  <div class="card-group">
+
+                    <div class="card text-bg-dark">
+                      <div class="card-body">
+                        <h5 class="card-title"><a href="https://www.headspace.com/about-us">Headspace</a></h5>
+                        <ul>
+                          <li> Teaches users how to meditate. </li>
+                          <li> Can use at anytime, even offline. </li>
+                        </ul>
+                        <img src="/prep/headspace-App.jpg" class="card-img-top" alt="...">
+                      </div>
+                    </div>
+
+
+                    <div class="card text-bg-dark">
+                      <div class="card-body">
+                        <h5 class="card-title"><a href="https://moodtools.org">MoodTools</a></h5>
+                        <ul>
+                          <li> Gives users activities and games to help them achieve their goals. </li>
+                          <li> Helps users improve their emotional well-being and reduce their stress. </li>
+                        </ul>
+                        <img src="/prep/moodtools.png" class="card-img-top" alt="...">
+                      </div>
+                    </div>
+
+
+                    <div class="card text-bg-dark">
+                      <div class="card-body">
+                        <h5 class="card-title"><a href="https://www.happify.com">Happify</a></h5>
+                        <ul>
+                          <li> Teaches users how to meditate </li>
+                          <li> Can use at anytime, even offline </li>
+                        </ul>
+                        <img src="/prep/happify.png" class="card-img-top" alt="...">
                       </div>
                     </div>
 
