future app and ai

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         </style>
 
-        <title> freedom Project: Mental Health Care</title>
+        <title> sep10-freedom-project </title>
     </head>
     <body id="page-top">
         <!-- HTML -->
@@ -32,7 +32,7 @@
                       <li class="nav-item"><a class="nav-link" href="#over"> Overview</a></li>
                       <li class="nav-item"><a class="nav-link" href="#etech"> Existing Technology</a></li>
                       <li class="nav-item"><a class="nav-link" href="#apps"> Apps </a></li>
-                      <li class="nav-item"><a class="nav-link" href="#">  </a></li>
+                      <li class="nav-item"><a class="nav-link" href="#future"> Future Technology </a></li>
 
 
                   </ul>
@@ -107,6 +107,7 @@
                 </section>
 
                 <section class="green">
+
                 <!-- Carousel -->
 
                     <div id="port" class="carousel carousel-dark slide" data-bs-ride="false">
@@ -161,6 +162,7 @@
 
                   </section>
 
+                  <!-- simulations -->
                   <section class="ggreen">
 
                     <div class="accordion accordion-flush"  id="a">
@@ -187,12 +189,13 @@
                   <img src="/prep/vrt.jpg" class="rounded mx-auto d-block" alt="...">
                 </section>
 
+                <!-- cards -->
                 <section class="ggreen">
                   <h4 class="text-center text-decoration-underline"> Prescription Video Games </h4>
                   <p class="text-center small-text text-white"> Videogames that are used to treat mental conditions. </p>
 
                   <div class="row row-cols-1 row-cols-md-2 g-4">
-                    <div class="col">
+                    <div class="col-md-6">
                       <div class="card text-bg-dark">
                         <div class="card-body text-bg-dark">
                           <h5 class="card-title">EndeavorRx</h5>
@@ -201,7 +204,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col">
+                    <div class="col-md-6">
                       <div class="card text-bg-dark">
                         <div class="card-body">
                           <h5 class="card-title">SPARX</h5>
@@ -213,8 +216,10 @@
 
                 </section>
 
+
+                <!-- Apps -->
                 <section class="darkblue" id="apps">
-                  <h1 class="text-center text-decoration-underline"> Mental Health Apps </h1>
+                  <h1 class="text-center"> Mental Health Apps </h1>
                   <p class="text-center small-text text-white"> These apps can be downloaded on devices like your phone, and they are used to help with your mental health </p>
 
                   <!-- cards -->
@@ -256,6 +261,72 @@
                     </div>
 
                 </section>
+
+
+                <!-- part-b -->
+                <section class="blue" id="future">
+
+                  <h1 class="text-center"> Future Technology </h1>
+
+                  <div class="container text-center">
+                    <div class="row row-cols-2">
+
+                      <div class="col-md-6 col-sm-8 col-xs-8">
+                        <h2 class="text-center text-decoration-underline"> AI face recognition </h2>
+                          <ul>
+                            <li>Camera with an AI that will recognize your facial expressions and determine your mood.</li>
+                            <li>This AI could be downloaded as an app on your phone or on anything with a camera
+                            </li>
+                          </ul>
+
+                          <img src="/prep/face-recognition.jpg" class="card-img-top" alt="...">
+
+
+                      </div>
+
+
+                      <div class="col-md-6 col-sm-8 col-xs-8">
+
+                        <h2 class="text-center text-decoration-underline"> Future App </h2>
+
+                        <p class="text-white">An app with resources to help you with your mental struggles, and an AI that you can talk to that will give you information about your mental state.</p>
+
+                        <h3 class=" text-center accordion-header" id="flush-headingOne">
+                          <button class=" purple btn-lg collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                           More details:
+                          </button>
+                        </h3>
+                          <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#a">
+                          <div class="accordion-body">
+                            <ul>
+                              <li>The AI will ask questions such as “how are you feeling” or “why do you feel this way”.
+                              <li> The AI will use vocal cues in your voice and your answers to find out what your mental state is .</li>
+                              <li> The Ai will also recommend possible routines or activities to support your needs</li>
+                              <li>It will give you advice and tell you encouraging things to cheer you up</li>
+                              <li>Since this will be an app, you could easily access it at any time if you have a smartphone or a smartwatch.</li>
+                              <li>This app will help people identify their mental struggles quickly.</li>
+                              <li>You could use the app to track your phone use and limit the amount of time you can use an app if you feel like it’s affecting you in a negative way.</li>
+                              <li>You will be given access educational information and links to help you understand mental health</li>
+                              <li>If you don’t feel comfortable talking to an AI, the app will also help you find mental health professionals.</li>
+                        </ul>
+                          </div>
+                          </div>
+                          <img src="/prep/brain-app.jpg" class="card-img-top" alt="...">
+                      </div>
+
+
+
+
+
+
+
+
+
+                    </div>
+                  </div>
+
+                </section>
+
 
 
 
