--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         </style>
 
-        <title> sep10-freedom-project </title>
+        <title> Mental-Health-Care </title>
     </head>
     <body id="page-top">
         <!-- HTML -->
@@ -133,7 +133,7 @@
                               <div class="card-body">
                             <h5 class=" text-center card-title">Smartwatch</h5>
                             <p class="card-text text-center text-white text-md-start"> A wearable device that gives you easy access to mental health care apps. </p>
-                            <img src="/prep/swatch.webp" class="card-img-bottom rounded" alt="...">
+                            <img src="../prep/swatch.webp" class="card-img-bottom rounded" alt="...">
                           </div>
                         </div>
                       </div>
