--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                             <div class="card-body">
                           <h5 class=" text-center card-title">Smartphones</h5>
                           <p class="card-text text-center text-white">Smartphones give you access to many mental health care apps and sources.</p>
-                          <img src="/prep/smartphone.webp" class="card-img-bottom rounded" alt="..."/>
+                          <img src="/prep/smartphone.jpg" class="card-img-bottom rounded" alt="..."/>
                           </div>
                           </div>
                         </div>
@@ -133,7 +133,7 @@
                               <div class="card-body">
                             <h5 class=" text-center card-title">Smartwatch</h5>
                             <p class="card-text text-center text-white text-md-start"> A wearable device that gives you easy access to mental health care apps. </p>
-                            <img src="/prep/swatch.webp" class="card-img-bottom rounded" alt="..."/>
+                            <img src="/prep/swatch.jpg" class="card-img-bottom rounded" alt="..."/>
                           </div>
                         </div>
                       </div>
