--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
         <link href="style.css" rel="stylesheet" type="text/css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -133,7 +133,7 @@
                               <div class="card-body">
                             <h5 class=" text-center card-title">Smartwatch</h5>
                             <p class="card-text text-center text-white text-md-start"> A wearable device that gives you easy access to mental health care apps. </p>
-                            <img src="/prep/swatch.webp" class="card-img-bottom rounded" alt="..."/>
+                            <img src="/prep/swatch.webp" class="card-img-bottom rounded" alt="...">
                           </div>
                         </div>
                       </div>
