--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                             <div class="card-body">
                           <h5 class=" text-center card-title">Smartphones</h5>
                           <p class="card-text text-center text-white">Smartphones give you access to many mental health care apps and sources.</p>
-                          <img src="/prep/smartphone.webp" class="card-img-bottom rounded" alt="..."/>
+                          <img src="prep/smartphone.webp" class="card-img-bottom rounded" alt="..."/>
                           </div>
                           </div>
                         </div>
@@ -133,7 +133,7 @@
                               <div class="card-body">
                             <h5 class=" text-center card-title">Smartwatch</h5>
                             <p class="card-text text-center text-white text-md-start"> A wearable device that gives you easy access to mental health care apps. </p>
-                            <img src="/prep/swatch.webp" class="card-img-bottom rounded" alt="...">
+                            <img src="prep/swatch.webp" class="card-img-bottom rounded" alt="...">
                           </div>
                         </div>
                       </div>
@@ -143,7 +143,7 @@
                           <div class="card-body">
                         <h5 class=" text-center card-title">Abilify MyCite</h5>
                         <p class="card-text text-center text-white"> A pill with a sensor inside that tracks drug ingestion, it is also used to treat schizophrenia. </p>
-                        <img src="/prep/repview.jpg" class="card-img-bottom rounded" alt="..."/>
+                        <img src="prep/repview.jpg" class="card-img-bottom rounded" alt="..."/>
                       </div>
                     </div>
                     </div>
@@ -186,7 +186,7 @@
                  <section class="ggreen">
                   <h4 class="text-center text-decoration-underline"> Virtual Reality Therapy (VRT) </h4>
                   <p class="text-center small-text text-white"> VRT uses a virtual world to help people treat their anxiety disorders, phobias, and post-traumatic stress disorder (PTSD).</p>
-                  <img src="/prep/vrt.jpg" class="rounded mx-auto d-block" alt="..."/>
+                  <img src="prep/vrt.jpg" class="rounded mx-auto d-block" alt="..."/>
                 </section>
 
                 <!-- cards -->
@@ -200,7 +200,7 @@
                         <div class="card-body text-bg-dark">
                           <h5 class="card-title">EndeavorRx</h5>
                           <p class="card-text text-white small-text">This is the first medical prescription videogame and it is used to treat 8-12 year old kids with ADHD.</p>
-                            <img src="/prep/end.jpg" class="card-img-top" alt="..."/>
+                            <img src="prep/end.jpg" class="card-img-top" alt="..."/>
                         </div>
                       </div>
                     </div>
@@ -209,7 +209,7 @@
                         <div class="card-body">
                           <h5 class="card-title">SPARX</h5>
                           <p class="card-text text-white small-text">A prescription videogame used to treat depression and anxiety in people who are ages 12–25.</p>
-                          <img src="/prep/sp.jpg" class="card-img-top" alt="..."/>
+                          <img src="prep/sp.jpg" class="card-img-top" alt="..."/>
                         </div>
                       </div>
                     </div>
@@ -232,7 +232,7 @@
                           <li> Teaches users how to meditate. </li>
                           <li> Can use at anytime, even offline. </li>
                         </ul>
-                        <img src="/prep/headspace-App.jpg" class="card-img-top" alt="..."/>
+                        <img src="prep/headspace-App.jpg" class="card-img-top" alt="..."/>
                       </div>
                     </div>
 
@@ -244,7 +244,7 @@
                           <li> Gives users activities and games to help them achieve their goals. </li>
                           <li> Helps users improve their emotional well-being and reduce their stress. </li>
                         </ul>
-                        <img src="/prep/moodtools.png" class="card-img-top" alt="..."/>
+                        <img src="prep/moodtools.png" class="card-img-top" alt="..."/>
                       </div>
                     </div>
 
@@ -256,7 +256,7 @@
                           <li> Teaches users how to meditate </li>
                           <li> Can use at anytime, even offline </li>
                         </ul>
-                        <img src="/prep/happify.png" class="card-img-top" alt="..."/>
+                        <img src="prep/happify.png" class="card-img-top" alt="..."/>
                       </div>
                     </div>
 
@@ -279,7 +279,7 @@
                             </li>
                           </ul>
 
-                          <img src="/prep/face-recognition.jpg" class="card-img-top" alt="..."/>
+                          <img src="prep/face-recognition.jpg" class="card-img-top" alt="..."/>
 
 
                       </div>
@@ -311,7 +311,7 @@
                         </ul>
                           </div>
                           </div>
-                          <img src="/prep/brain-app.jpg" class="card-img-top" alt="..."/>
+                          <img src="prep/brain-app.jpg" class="card-img-top" alt="..."/>
                       </div>
 
 
