--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
         <link href="style.css" rel="stylesheet" type="text/css" />
@@ -324,6 +325,17 @@
 
                     </div>
                   </div>
+
+                </section>
+
+                <section class=" text-center blue">
+
+                  <h2>Comfort Robot</h2>
+
+                  <p class="text-center small-text text-white"> A robot that will comfort you by giving you positive advice or by playing calming music.
+                  </p>
+
+
 
                 </section>
 
