--- a/index.html
+++ b/index.html
@@ -13,6 +13,42 @@
 
         <style>
             /* CSS */
+
+            h1 {
+              font-size: calc(1.375rem + 1.5vw);
+              padding: 15px;
+              color: #bdfff1;
+            }
+
+            h2 {
+              font-size: calc(1.325rem + 0.9vw);
+              color: #bdfff1;
+              padding: 15px;
+            }
+
+            h3 {
+              font-size: calc(1.3rem + 0.6vw);
+              padding: 15px;
+              color: #bdfff1;
+            }
+
+            h4, .h4 {
+              font-size: calc(1.275rem + 0.3vw);
+              padding: 15px;
+              color: #bdfff1;
+            }
+
+            h5, .h5 {
+              font-size: 2.5vw;
+              padding: 15px;
+              color: #bdfff1;
+            }
+
+            h6, .h6 {
+              font-size: 1rem;
+              padding: 15px;
+            }
+
             p {
                 margin-top: 0;
                 margin-bottom: 1rem;
@@ -81,7 +117,6 @@
                     height: 50%;
                     margin-left: auto;
                     margin-right: auto;
-
                   }
 
                   header.masthead {
