--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
         <title> Mental-Health-Care </title>
     </head>
     <body id="page-top">
+
         <!-- HTML -->
 
         <!-- Navigation-->
@@ -157,7 +158,6 @@
                       <li class="nav-item"><a class="nav-link" href="#etech"> Existing Technology</a></li>
                       <li class="nav-item"><a class="nav-link" href="#apps"> Apps </a></li>
                       <li class="nav-item"><a class="nav-link" href="#future"> Future Technology </a></li>
-
 
                   </ul>
               </div>
@@ -225,9 +225,6 @@
                   </div>
                  </div>
 
-
-
-
                 </section>
 
                 <section class="green">
@@ -286,7 +283,9 @@
 
                   </section>
 
-                  <!-- simulations -->
+                  <!-- Simulations -->
+
+                  <!-- button -->
                   <section class="ggreen">
 
                     <div class="accordion accordion-flush"  id="a">
@@ -307,11 +306,16 @@
 
                   </section>
 
+
+
+
                  <section class="ggreen">
                   <h4 class="text-center text-decoration-underline"> Virtual Reality Therapy (VRT) </h4>
                   <p class="text-center small-text text-white"> VRT uses a virtual world to help people treat their anxiety disorders, phobias, and post-traumatic stress disorder (PTSD).</p>
                   <img src="prep/vrt.jpg" class="rounded mx-auto d-block" alt="..."/>
                 </section>
+
+
 
                 <!-- cards -->
                 <section class="ggreen">
@@ -395,6 +399,8 @@
                   <div class="container text-center">
                     <div class="row row-cols-2">
 
+
+                      <!-- Idea-1 -->
                       <div class="col-md-6 col-sm-8 col-xs-8">
                         <h2 class="text-center text-decoration-underline"> AI face recognition </h2>
                           <ul>
@@ -409,12 +415,15 @@
                       </div>
 
 
+                      <!-- Idea-2 -->
                       <div class="col-md-6 col-sm-8 col-xs-8">
 
                         <h2 class="text-center text-decoration-underline"> Future App </h2>
 
                         <p class="text-white">An app with resources to help you with your mental struggles, and an AI that you can talk to that will give you information about your mental state.</p>
 
+
+                        <!-- button/dropdown-list -->
                         <h3 class=" text-center accordion-header" id="flush-headingOne">
                           <button class=" purple btn-lg collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                            More details:
@@ -437,19 +446,11 @@
                           </div>
                           <img src="prep/brain-app.jpg" class="card-img-top" alt="..."/>
                       </div>
-
-
-
-
-
-
-
-
-
                     </div>
                   </div>
 
                 </section>
+
 
                 <section class=" text-center blue">
 
@@ -459,7 +460,7 @@
                   </p>
 
 
-
+                  <!-- Aframe -->
 
        <iframe src="tool/fp-aframe.html" title="description" height="500" width="500"> </iframe>
 
