--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
 
                   <!-- Aframe -->
 
-       <iframe src="tool/fp-aframe.html" title="description" height="500" width="500"> </iframe>
+       <iframe src="tool/fp-aframe.html" title="description" height="100%" width="90%"> </iframe>
 
                 </section>
 
